--- a/GrapeCity.DataService/GrapeCity.DataService.csproj
+++ b/GrapeCity.DataService/GrapeCity.DataService.csproj
@@ -5,6 +5,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="efpt.config.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="efpt.config.json" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="GraphQL" Version="2.4.0" />  <!-- GraphQL.Net -->
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Formatters.Xml" Version="2.2.0" /> <!-- for support response in XML format -->
     <PackageReference Include="Microsoft.AspNetCore.OData" Version="7.3.0" /> <!-- support OData v4 -->
@@ -23,7 +31,11 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.1" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update=".deployment">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 </Project>
